<resources>
    <string name="app_name">Unorganised</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="login">Login</string>
    <string name="register">REGISTER</string>
    <string name="register1">REGISTER 1\\6</string>
    <string name="register2">REGISTER 2\\6</string>
    <string name="register3">REGISTER 3\\6</string>
    <string name="register4">REGISTER 4\\6</string>
    <string name="register5">REGISTER 5\\6</string>
    <string name="register6">REGISTER 6\\6</string>
    <string name="call_center">Call Us</string>
    <string name="newuser">Don\'t have an Account?</string>
    <string name="helping_hand_text">Want to be a helping hand ?</string>
    <string name="fullname">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_id">Email Address</string>
    <string name="email_id_text">Email Id</string>
    <string name="next">Next</string>
    <string name="add_service">Add Service</string>
    <string name="register_now_text">Register Now !!</string>
    <string name="verify_mobile">Verify Mobile Number</string>
    <string name="otp_text">We have sent OTP (One Time Password) to your Mobile number</string>
    <string name="edit_mobile_no">Edit Mobile Number</string>
    <string name="hello">Hello !!</string>
    <string name="sel_type_of_user">Select type of user</string>
    <string name="register_as">Register as</string>
    <string name="what_is_unorganised">What is Unorganised?</string>
    <string name="unorganised_text">Unoraganised provides organised  ways to explore and directly contact Local Service Providers in your vicinity</string>
    <string name="resend_otp">Din\'t receive OTP ?</string>
    <string name="send_again"> Send again</string>
    <string name="opt_resent">OTP Resent</string>
    <string name="verify_OTP_text">X-X-X-X-X</string>
    <string name="verify_otp">Verify OTP</string>
    <string-array name="user_type">
        <item>Service Provider</item>
        <item>Service Seeker</item>
    </string-array>
    <string name="help_text">Call us</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="job_seeker">Service Professional</string>
    <string name="job_provider">Service User</string>
    <string name="job_seeker_title_">Service Professional </string>
    <string name="job_provider_title">Service User</string>
    <string name="mobile_number_start">+91</string>
    <string name="almosthere_text">You are almost there !!</string>
    <string name="provide_bank_details">Please provide below details</string>
    <string name="enter_accnt_number">Enter Account Number</string>
    <string name="reenter_account_number">Re Enter Account Number</string>
    <string name="select_bank">Select Your Bank</string>
    <string name="isfc_code">ISFC Code</string>
    <string name="adhar_no">Aadhar Number</string>
    <string name="select_bank_prompt">Select Your Bank</string>
    <string name="select_doc_prompt">Select document Type</string>
    <string name="upload_photo_text">Upload Your Photograph</string>
    <string name="upload_doc_text">Upload Your Document</string>
    <string name="proof_of_identity_text">Photo Identity Proof</string>
    <string name="upload_proof_of_identity_text">Upload Proof of Identity</string>
    <string name="sel_document">Select your Document</string>
    <string name="cancel_cheque_text">Cancelled Cheque Leaf</string>
    <string name="upload_cancel_cheque_text">Upload Cancelled Cheque Leaf</string>
    <string name="finish_text">Finish</string>
    <string name="enable_location_msg">Please enable your location and try again</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="search_service_area_hint_message">Search Preferred Service Area</string>
    <string name="search_job_hint_msg">Enter location to search job</string>
    <string name="driving_text">Driving</string>
    <string name="bicycling_text">BiCycling</string>
    <string name="walking_text">Walking</string>
    <string name="job_search_title">JobSearch</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="search_job">Search Job</string>
    <string name="on_going_job">Ongoing Jobs</string>
    <string name="pending_job">Pending Jobs</string>
    <string name="completed_jobs">Completed Jobs</string>
    <string name="subscribed">Subscribed</string>
    <string name="payment_info">Payment Info</string>
    <string name="acc_settings">Account Settings</string>
    <string name="logout">Logout</string>
    <string name="help">Help</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="accepted_jobs">Accepted Jobs</string>
    <string name="accepted_for">Accepted For</string>
    <string name="switch_user">Switch User</string>
    <string name="recent_notification">Recent Notifications</string>
    <string name="notification">Notifications</string>
    <string name="call_now">CallNow</string>
    <string name="assign">Assign</string>
    <string name="accept">Accept</string>
    <string name="apply">Apply</string>
    <string name="register_small">Register</string>
    <string name="request_job">RequestJob</string>
    <string name="post_job">Post a Job</string>
    <string name="no_pending_jobs">No Pending Jobs</string>
    <string name="choose_location">Choose Location</string>
    <string name="select_payment_type">Select Payment Type</string>
    <string name="provide_job_details">Provide all Job Details</string>
    <string name="india_mobile_code">+91</string>
    <string name="navigate">Navigate</string>
    <string name="job_description">Job Description</string>
    <string name="rs_text">Rs.</string>
    <string name="jobs_availabl_text">Jobs Available</string>
    <string name="price">Price</string>
    <string name="date_time">Date/ Time</string>
    <string name="user_review">User Review</string>
    <string name="decline">Decline</string>
    <string name="start_job">StartJob</string>
    <string name="confirm_text">Confirm</string>
    <string name="tracking_location">Tracking Location</string>
    <string name="edit_job">Edit Job</string>
    <string name="edit_job_text">Edit the job details (e.g. Service/Location/Price)</string>
    <string name="delete_job">Delete Job</string>
    <string name="delete_job_text">Delete the job listing</string>
    <string name="prefered_services">Preferred Services</string>
    <string name="title_activity_sub_services">SubServicesActivity</string>
    <string name="title_activity_service_types">ServiceTypesActivity</string>
    <string name="select_category">Select the service</string>
    <string name="select_sub_category">Select the Sub Service</string>
    <string name="job_details">Job Details</string>
    <string name="bidding_price">Bidding Price</string>
    <string name="location">Location</string>
    <string name="post_now">Post Now</string>
    <string name="schedule_later">Schedule Later</string>
    <string name="select_date">Select Date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="ok">OK</string>
    <string name="payment">Payment</string>
    <string name="pay_now">Pay Now</string>
    <string name="rate">Rate</string>
    <string name="select_payment_option">Select Payment Option</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="delete">Delete ?</string>
    <string name="delete_text">Are you sure you want to delete the selected Job ?</string>
    <string name="delete_btn">Delete</string>
    <string name="title_activity_job_details">JobDetailsActivity</string>
    <string name="registered_user_title">Select the type of user!</string>
    <string name="select_type_user">Select the type of User</string>
    <string name="t_and_c_title">Terms &amp; Condition</string>
    <string name="acceptance_of_terms">A: Acceptance of Terms</string>
    <string name="terms_of_service_text">PLEASE READ THE TERMS OF USE THOROUGHLY AND CAREFULLY. The terms and conditions set forth below(\“Terms of Use\”) and the Privacy Policy constitute a legally-binding agreement between SlapDash Inc. Pvt Ltd(\“Unorganised\”) and you. These Terms of Use contain provisions that define your limits, legal rights and obligations with respect to your use of and participation in (i) the Unorganised mobile application(referred to as the \“App\”), including the forums, various email functions and Internet links, and all content and Unorganised services available through the mobile application and (ii) the online transactions between those users of the app who are offering services(referred as “Service Professional”) and the ends users availing the services(referred as “Service User”) through the App.The Terms of Use described below incorporates the Privacy Policy and apply to all users of the App,including users who contributed to video content, information, private and public messages, advertisements, and other materials on the App.You also acknowledge that the App serves as a venue for the online distribution and publication of user submitted information between Service Professionals and Service Users and, by visiting, registering for the services presented, promoted and displayed on the App, by clicking on  “Accept”, you hereby certify that (1) you are either a Service professional or a prospective Service User or both (2) you have the authority to enter into these Terms of Use, (3) you authorize the transfer of payment for the services requested through the App by modes like Cash &amp; Online Payment , and (4) you agree to bound by all terms and conditions of these Terms of Use and any other document incorporated by reference herein.If you do not agree to these terms and conditions of Terms of Use, you should not click on “Accept”, in which case you are prohibited from using the App, also withdraw from viewing, clicking, participating in the App with immediate effect.BY USING THE APP, YOU CERTIFY YOU ARE AT LEAST 18 YEARS OF AGE AND LEGEALLY ELIGIBLE TO ENTER INTO AN ENFORCEABLE CONTRACT Unorganised reserves the right, in its sole discretion, to change, update or otherwise modify the Terms of Use, and other any other references incorporated hereby for complying with legal and regulatory conditions, or for other legitimate business purposes ,at any time and the same will be updated in the Terms of Use page with the last update date. It is solely your responsibility to review the Terms of Use for any changes on a regular basis. At any point of time, you don’t agree with the terms and conditions, please do not use the App.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="splash_logo_desc">splash logo image</string>
    <string name="helloUser">Hello</string>
    <string name="name">Abhilash Mishra</string>
    <string name="welcome">Welcome to Unorganised</string>
    <string name="U_have_logged_in_as">You have Logged in as</string>
    <string name="provider">Service User</string>
    <string name="Seeker">Service Professional</string>
    <string name="button_continue">Continue</string>
    <string name="edit_bank">Edit Bank Details</string>
    <string name="payment_details">Payment Details</string>
    <string name="first_name">First Name</string>
    <string name="provide_payment_details">Edit Payment Details</string>
</resources>