<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/splash"
    tools:context="com.unorganised.activities.WelcomeScreen">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="@dimen/fullname_top_margin">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/helloUser"
                android:gravity="center"
                android:textColor="@color/white"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingBottom="@dimen/un_organised_padding"/>
            <TextView
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:gravity="center"
                android:textColor="@color/yellow"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/text_top_margin"
            android:gravity="center">
            <ImageView
                android:id="@+id/profile_icon_id"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/default_profile_pic"
                android:background="@color/white" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/un_organised_padding">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:gravity="center"
                android:textColor="@color/white"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:paddingTop="30dp"
            android:paddingBottom="25dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/U_have_logged_in_as"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <LinearLayout
                android:id="@+id/provider"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:layout_marginRight="@dimen/un_organised_padding"
                android:visibility="gone"
                android:background="@drawable/custom_border">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/icn_provider"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/provider"
                    android:textColor="@color/white"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/seeker"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:visibility="gone"
                android:background="@drawable/custom_border">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/icn_seeker"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Seeker"
                    android:textColor="@color/white"
                    android:gravity="center" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="@dimen/text_bottom_margin">
        <Button
            android:id="@+id/butt_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_continue"
            android:textColor="@color/yellow"
            android:background="@drawable/button_selector"
            android:layout_marginLeft="@dimen/button_left_margin"
            android:layout_marginRight="@dimen/button_right_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>
</RelativeLayout>
